# CustomThreads

./: .gitignore  3DPrintedMetricV3.xml  README.md  expand_threads.py  main.py  pyproject.toml
.github/: CI_GUIDE.md
.github/workflows/: deploy-pages.yml  generate-xml-release.yml
src/customthreads/: __init__.py  cli.py  generator.py  models.py  utils.py
tests/: test_main.py
web/: README.md  index.html  style.css
web/js/: app.js  calculator.js  xml.js
