[tool.poetry]
name = "customthreads"
version = "1.0.0"
description = "3D-Printed Metric Threads Generator - Generate standardized ISO metric thread profiles for 3D printing"
authors = ["Philip Ecker <philip@example.com>"]
readme = "README.md"
packages = [{include = "customthreads", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
